Kubernetes/mongoex-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongoex-deployment
  labels: 
    app: mongoex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoex
  template:
    metadata:
      labels:
        app: mongoex
    spec:
      containers:
      - name: mongoex
        image: mongo-express
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongoex-service
spec:
  selector:
    app: mongoex
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
